--- a/pton/_seeing_in_the_dark_part2.html
+++ b/pton/_seeing_in_the_dark_part2.html
@@ -12,8 +12,8 @@
 	<script src="https://courses.edx.org/asset-v1:GeorgetownX+PHYX-008-01x+2T2020+type@asset+block/jquery.hammer.js"></script>
 	<script src="https://courses.edx.org/asset-v1:GeorgetownX+PHYX-008-01x+2T2020+type@asset+block/Three.js"></script>
 	<script src="https://courses.edx.org/asset-v1:GeorgetownX+PHYX-008-01x+2T2020+type@asset+block/mirror.js"></script>
-	<script src="PHOTON-engine.js"></script>
-	<script src="seeing-in-the-dark-part2.js"></script>
-	<script src="movement.js"></script>
+	<script src="https://raw.githubusercontent.com/QMwC/Book-Resources/master/pton/PHOTON-engine.js"></script>
+	<script src="https://raw.githubusercontent.com/QMwC/Book-Resources/master/pton/seeing-in-the-dark-part2.js"></script>
+	<script src="https://raw.githubusercontent.com/QMwC/Book-Resources/master/pton/movement.js"></script>
 </body>
 </html>
