--- a/pton/_seeing_in_the_dark_part2.html
+++ b/pton/_seeing_in_the_dark_part2.html
@@ -7,13 +7,13 @@
 </head>
 <body>
 	<script src="https://courses.edx.org/asset-v1:GeorgetownX+PHYX-008-01x+2T2020+type@asset+block/raphael-min.js"></script>
-	<script src="https://courses.edx.org/asset-v1:GeorgetownX+PHYX-008-01x+2T2020+type@asset+block/jquery-2.1.4.min.js"></script>
-	<script src="https://courses.edx.org/asset-v1:GeorgetownX+PHYX-008-01x+2T2020+type@asset+block/hammer.min.js"></script>
-	<script src="https://courses.edx.org/asset-v1:GeorgetownX+PHYX-008-01x+2T2020+type@asset+block/jquery.hammer.js"></script>
-	<script src="https://courses.edx.org/asset-v1:GeorgetownX+PHYX-008-01x+2T2020+type@asset+block/Three.js"></script>
-	<script src="https://courses.edx.org/asset-v1:GeorgetownX+PHYX-008-01x+2T2020+type@asset+block/mirror.js"></script>
-	<script src="https://raw.githubusercontent.com/QMwC/Book-Resources/master/pton/PHOTON-engine.js"></script>
-	<script src="https://raw.githubusercontent.com/QMwC/Book-Resources/master/pton/seeing-in-the-dark-part2.js"></script>
-	<script src="https://raw.githubusercontent.com/QMwC/Book-Resources/master/pton/movement.js"></script>
+        <script src="https://courses.edx.org/asset-v1:GeorgetownX+PHYX-008-01x+2T2020+type@asset+block/jquery-2.1.4.min.js"></script>
+        <script src="https://courses.edx.org/asset-v1:GeorgetownX+PHYX-008-01x+2T2020+type@asset+block/hammer.min.js"></script>
+        <script src="https://courses.edx.org/asset-v1:GeorgetownX+PHYX-008-01x+2T2020+type@asset+block/jquery.hammer.js"></script>
+        <script src="https://courses.edx.org/asset-v1:GeorgetownX+PHYX-008-01x+2T2020+type@asset+block/Three.js"></script>
+        <script src="https://courses.edx.org/asset-v1:GeorgetownX+PHYX-008-01x+2T2020+type@asset+block/mirror.js"></script>
+        <script src="https://cdn.jsdelivr.net/gh/QMwC/Book-Resources@master/pton/PHOTON-engine.js"></script>
+        <script src="https://cdn.jsdelivr.net/gh/QMwC/Book-Resources@master/pton/seeing-in-the-dark-part2.js"></script>
+        <script src="https://cdn.jsdelivr.net/gh/QMwC/Book-Resources@master/pton/movement.js"></script>
 </body>
 </html>
