--- a/courses/math/index.html
+++ b/courses/math/index.html
@@ -2135,7 +2135,7 @@
 
       window.onmessage = (e) => {
         if (e.origin === "https://quantum.georgetown.domains") {
-          window.parent.postMessage(document.body.parentElement.offsetHeight, "https://quantum.georgetown.domains");
+          window.parent.postMessage(document.body.parentElement.scrollHeight, "https://quantum.georgetown.domains");
         }
       }
     </script>
