Alternate between offsetHeight and scrollHeight.

--- a/courses/math/index.html
+++ b/courses/math/index.html
@@ -2133,9 +2133,16 @@
         return e;
       }
 
+      let msg = 0;
       window.onmessage = (e) => {
         if (e.origin === "https://quantum.georgetown.domains") {
-          window.parent.postMessage(document.body.parentElement.scrollHeight, "https://quantum.georgetown.domains");
+          if (msg) {
+            window.parent.postMessage(document.body.parentElement.offsetHeight, "https://quantum.georgetown.domains");
+            msg = 0;
+          } else {
+            window.parent.postMessage(document.body.parentElement.scrollHeight, "https://quantum.georgetown.domains");
+            msg = 1;
+          }
         }
       }
     </script>
